--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
   "author": "Neha Khachhibhoya",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/http-errors": "^1.8.0",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
