--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.9",
     "http-errors": "^1.8.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0"
