--- a/server/package.json
+++ b/server/package.json
@@ -28,10 +28,10 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.9",
     "http-errors": "^1.8.0",
     "mongoose": "^5.9.27",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
@@ -39,6 +39,7 @@
     "@types/fs-extra": "^9.0.1",
     "@types/mongoose": "^5.7.34",
     "@types/morgan": "^1.9.1",
+    "@types/multer": "^1.4.3",
     "@types/node": "^14.0.14",
     "fs-extra": "^9.0.1",
     "nodemon": "^2.0.4",
