--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
